--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "twilio": "^5.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
